# sample-nativepio

./: .gitignore  README.md  build.gradle  settings.gradle
.google/: packaging.yaml
android-system-properties/: AndroidSystemProperties.cpp  AndroidSystemProperties.h
blink/: build.gradle
blink/src/main/: AndroidManifest.xml
blink/src/main/cpp/: CMakeLists.txt  blink.cpp
blink/src/main/res/values/: strings.xml
button/: build.gradle
button/src/main/: AndroidManifest.xml
button/src/main/cpp/: CMakeLists.txt  button.cpp
button/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
speaker/: build.gradle
speaker/src/main/: AndroidManifest.xml
speaker/src/main/cpp/: CMakeLists.txt  speaker.cpp
speaker/src/main/res/values/: strings.xml
